# UG-POSMT

./: .python-version  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yml
data/: data.csv
notebook/: data_loadr.ipynb  viusalize_masks.ipynb
src/: MaskGenerator.py  data_loadr.ipynb  generate_mask.py  main.py  mask.py  utils.py
src/config/: language_models.json  paths.py  settings.py
tests/: test_MaskGenerator.py  test_generate_mask.py
