[tool.poetry]
name = "ug-posmt"
version = "0.1.0"
description = ""
authors = ["Ag0r9 <Ag0r@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.3"
spacy = "^3.7.2"
pytorch = "^1.0.2"
black = "^23.11.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
