[tool.poetry]
name = "posmt"
version = "0.1.0"
description = ""
authors = ["Ag0r9 <Ag0r@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.2.0"
transformers = "^4.37.2"
datasets = "^2.16.1"
spacy = "^3.7.3"
pydantic-settings = "^2.1.0"
loguru = "^0.7.2"
typer = "^0.9.0"
nltk = "^3.8.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
mypy = "^1.8.0"
black = "^24.1.1"
notebook = "^7.0.7"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
